Fix about align Fix bicycle align

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,21 +1,22 @@
 @charset "utf-8";
 
-title{
-    backgorund: black;
-}
 
-mainvisual{
+
+.mainvisual{
     height: 600px;
+    width: 100%;
+    padding: 0%;
+    margin: 0%;
 }
 
-about{
+.aboutcontent{
     width: 960px;
     padding: 4%;
     margin-right: auto;
     margin-left : auto; 
 }
 @media screen{
-    .main {
+    .aboutcontent{
       width: 600px;
       padding: 4%;
     }
@@ -23,4 +24,68 @@ about{
 
 aboutimg{
     border-radius:50%;
+}
+
+h2{
+    text-decoration:underline;
+    text-align: center; 
+}
+
+.b{
+    height: auto;
+    width: 280px;
+}
+header{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.item{
+    width: 10%;
+    padding: 10px;
+    text-align: center;
+}
+
+.column{
+    display: flex;
+    flex-wrap: wrap;
+    width: 960px;
+    margin-right: auto;
+    margin-left : auto; 
+}
+
+.bike{
+    width: calc(100%/3);
+    padding: 10px;
+    text-align: center;
+}
+
+ul{
+    list-style: none;
+}
+
+.aboutcontent{
+    display: flex;
+    flex-wrap: wrap;
+    width: 960px;
+}
+
+.abouttext{
+    width: 70%;
+    padding: 10px;
+    text-align: left;
+}
+
+.aboutimg{
+    width: 20%;
+    height: auto;
+    border-radius: 50%; 
+}
+
+.footer{
+   color: rgb(175, 175, 175);
+   text-align: center;
+   margin-right: auto;
+   margin-left : auto; 
 }
